# Lots-of-Lines

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  LotsOfLinesApp.pri  LotsOfLinesApp.pro  README.md  configure.bat  installer.nsi
Application/: LotsOfLinesApp.sln
Application/LotsOfLinesApp/: LotsOfLinesApp.cpp  LotsOfLinesApp.sln  LotsOfLinesApp.ui  LotsOfLinesApp.vcxproj  LotsOfLinesApp.vcxproj.filters
Application/LotsOfLinesLibrary/: CSVFileLoader.cpp  CSVFileLoader.h  DataFileLoader.cpp  DataFileLoader.h  DataModel.cpp  DataModel.h  DataSet.cpp  DataSet.h  IDataLoader.h  LotsOfLinesLibrary.vcxproj  LotsOfLinesLibrary.vcxproj.filters
DataModel/: CMakeLists.txt
DataModel/include/LotsOfLines/: CSVFileLoader.hpp  DataFileLoader.hpp  DataModel.hpp  DataSet.hpp  FileSystemLoader.hpp  IDataLoader.hpp
DataModel/source/: CSVFileLoader.cpp  DataFileLoader.cpp  DataModel.cpp  DataSet.cpp  FileSystemLoader.cpp
ExcelAddin/LotsOfLinesExcel/: LotsOfLinesExcel.sln
GuiSystem/: CMakeLists.txt
GuiSystem/include/LotsOfLines/: MainWindow.hpp
GuiSystem/source/: MainWindow.cpp
RenderingSystem/: CMakeLists.txt
RenderingSystem/include/LotsOfLines/: CollocatedPairedCoordinatesVisualizationMethod.hpp  IRenderer.hpp  IVertexBufferObject.hpp  IVisualizationMethod.hpp  OpenGLRenderer.hpp  OpenGLShader.hpp  OpenGLVertexBufferObject.hpp  ParallelCoordinatesVisualizationMethod.hpp  RadialPairedCoordinatesVisualizationMethod.hpp  RenderingSystem.hpp  Shaders.hpp  ShiftedPairedCoordinatesVisualizationMethod.hpp  VisualizationOptions.hpp
RenderingSystem/source/: CollocatedPairedCoordinatesVisualizationMethod.cpp  OpenGLRenderer.cpp  OpenGLShader.cpp  OpenGLVertexBufferObject.cpp  ParallelCoordinatesVisualizationMethod.cpp  RadialPairedCoordinatesVisualizationMethod.cpp  RenderingSystem.cpp  Shaders.cpp  ShiftedPairedCoordinatesVisualizationMethod.cpp  VisualizationOptions.cpp
data/: forestfiresFullDataSet.csv
data-model/: CMakeLists.txt
data-model/include/: DataModel.h  IDataLoader.h
data-model/source/: DataModel.cpp
docs/: Doxyfile
docs/html/: _c_s_v_file_loader_8hpp_source.html  _collocated_paired_coordinates_visualization_method_8hpp_source.html  _data_file_loader_8hpp_source.html  _data_model_8hpp_source.html  _data_set_8hpp_source.html  _data_table_model_8h_source.html  _i_data_loader_8hpp_source.html  _i_renderer_8hpp_source.html  _i_shader_8hpp_source.html  _i_vertex_buffer_object_8hpp_source.html  _i_visualization_method_8hpp_source.html  _load_data_dialog_8h_source.html  _loading_worker_8h_source.html  _lots_of_lines_app_8h_source.html  _open_g_l_renderer_8hpp_source.html  _open_g_l_shader_8hpp_source.html  _open_g_l_vertex_buffer_object_8hpp_source.html  _option_editor_widget_8h_source.html  _parallel_coordinates_visualization_method_8hpp_source.html  _preferences_dialog_8h_source.html  _progress_message_8hpp_source.html  _radial_paired_coordinates_visualization_method_8hpp_source.html  _rendering_system_8hpp_source.html  _shaders_8hpp_source.html  _shifted_paired_coordinates_visualization_method_8hpp_source.html  _visualization_options_8hpp_source.html  _visualization_renderer_widget_8h_source.html  annotated.html  class_data_table_model-members.html  class_data_table_model.html  class_load_data_dialog-members.html  class_load_data_dialog.html  class_loading_worker-members.html  class_loading_worker.html  class_lots_of_lines_1_1_c_s_v_file_loader-members.html  class_lots_of_lines_1_1_c_s_v_file_loader.html  class_lots_of_lines_1_1_collocated_paired_coordinates_visualization_method-members.html  class_lots_of_lines_1_1_collocated_paired_coordinates_visualization_method.html  class_lots_of_lines_1_1_data_file_loader-members.html  class_lots_of_lines_1_1_data_file_loader.html  (+82 more)
docs/latex/: annotated.tex  class_data_table_model.eps  class_data_table_model.tex  class_load_data_dialog.eps  class_load_data_dialog.tex  class_loading_worker.eps  class_loading_worker.tex  class_lots_of_lines_1_1_c_s_v_file_loader.eps  class_lots_of_lines_1_1_c_s_v_file_loader.tex  class_lots_of_lines_1_1_collocated_paired_coordinates_visualization_method.eps  class_lots_of_lines_1_1_collocated_paired_coordinates_visualization_method.tex  class_lots_of_lines_1_1_data_file_loader.eps  class_lots_of_lines_1_1_data_file_loader.tex  class_lots_of_lines_1_1_data_model.tex  class_lots_of_lines_1_1_data_set.tex  class_lots_of_lines_1_1_data_set_1_1_iterator.tex  class_lots_of_lines_1_1_i_data_loader.eps  class_lots_of_lines_1_1_i_data_loader.tex  class_lots_of_lines_1_1_i_renderer.eps  class_lots_of_lines_1_1_i_renderer.tex  class_lots_of_lines_1_1_i_shader.eps  class_lots_of_lines_1_1_i_shader.tex  class_lots_of_lines_1_1_i_vertex_buffer_object.eps  class_lots_of_lines_1_1_i_vertex_buffer_object.tex  class_lots_of_lines_1_1_i_visualization_method.eps  class_lots_of_lines_1_1_i_visualization_method.tex  class_lots_of_lines_1_1_open_g_l_renderer.eps  class_lots_of_lines_1_1_open_g_l_renderer.tex  class_lots_of_lines_1_1_open_g_l_shader.eps  class_lots_of_lines_1_1_open_g_l_shader.tex  class_lots_of_lines_1_1_open_g_l_vertex_buffer_object.eps  class_lots_of_lines_1_1_open_g_l_vertex_buffer_object.tex  class_lots_of_lines_1_1_parallel_coordinates_visualization_method.eps  class_lots_of_lines_1_1_parallel_coordinates_visualization_method.tex  class_lots_of_lines_1_1_progress_message.eps  class_lots_of_lines_1_1_progress_message.tex  class_lots_of_lines_1_1_radial_paired_coordinates_visualization_method.eps  class_lots_of_lines_1_1_rendering_system.tex  (+39 more)
source/: DataTableModel.cpp  DataTableModel.h  LoadDataDialog.cpp  LoadDataDialog.h  LoadingWorker.cpp  LoadingWorker.h  LotsOfLinesApp.cpp  LotsOfLinesApp.cpp.i14572  LotsOfLinesApp.h  LotsOfLinesApp.qrc  LotsOfLinesApp.ui  OptionEditorWidget.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  VisualizationRendererWidget.cpp  VisualizationRendererWidget.h  main.cpp  main.cpp.K13896
tests/: CMakeLists.txt  DataModelTest.cpp  tests.cpp
tests/data/: collocated-paired-coordinates-test.data  iris-small.data
(+120 files in other folders)
